# elatum-kb-optim

./: .editorconfig  .gitignore  Cargo.toml
datasets/: extract_from_tg_chat.py
src/: macros.rs  main.rs
