[package]
name = "elatum-kb-optim"
version = "0.0.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"
# lto = "fat"
opt-level = 3
panic = "abort"
strip = true
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
nalgebra = "0.33.2"
rand = "0.9.1"
rayon = "1.10.0"
